--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "node index.js"
   },
   "author": "Erdősi-Szücs Frigyes",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "bs58": "^4.0.1",
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "elliptic": "^6.5.4",
     "micro_coin": "file:MicroCoin-Javacript-SDK"
   }
