--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "elliptic": "^6.5.4",
+    "fs": "0.0.1-security",
     "micro_coin": "file:MicroCoin-Javacript-SDK"
   }
 }
